[Bromley] Fix positioning of logged in message.
Not sure where the old figure came from, but it's too far over to the
right.

--- a/web/cobrands/bromley/layout.scss
+++ b/web/cobrands/bromley/layout.scss
@@ -71,7 +71,7 @@ body.alertindex form.full-width {
 body.mappage #user-meta p {
   background-color: $bromley_blue;
   border-bottom: 1px solid #444;
-  left: 2.65em;
+  left: 1em;
 }
 
 // And also override the banner on other pages so that it lines up properly
